update profile photo

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <section class="glass">
           <div class="dashboard">
             <div class="user">
-              <img src="./images/avatar.png" alt="" />
+              <img src="./images/pic.png" alt="" />
               <h3>ElAmir ElOthmani</h3>
-              <p>Pro Member</p>
+              <p>Software Engineer</p>
             </div>
             <div class="links">
               <div class="link">
@@ -87,9 +87,9 @@
         <section class="glass">
           <div class="dashboard">
             <div class="user">
-              <img src="./images/avatar.png" alt="" />
+              <img src="./images/pic.png" alt="" />
               <h3>ElAmir ElOthmani</h3>
-              <p>Pro Member</p>
+              <p>Software Engineer</p>
             </div>
             <div class="links">
               <div class="link">
@@ -155,9 +155,9 @@
         <section class="glass">
           <div class="dashboard">
             <div class="user">
-              <img src="./images/avatar.png" alt="" />
+              <img src="./images/pic.png" alt="" />
               <h3>ElAmir ElOthmani</h3>
-              <p>Pro Member</p>
+              <p>Software Engineer</p>
             </div>
             <div class="links">
               <div class="link">
