add weather info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
+    <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
       <div class="container">
@@ -23,20 +24,21 @@
             </div>
             <div class="links">
               <div class="link">
-                <img src="./images/twitch.png" alt="" />
-                <h2>Streams</h2>
+                <img src="./images/whatsapp.png" alt="" />
+                <h2>WhatsApp</h2>
+                
               </div>
               <div class="link">
-                <img src="./images/steam.png" alt="" />
-                <h2>Games</h2>
+                <img src="./images/messenger.png" alt="" />
+                <h2>Messenger</h2>
               </div>
               <div class="link">
-                <img src="./images/upcoming.png" alt="" />
-                <h2>New</h2>
+                <img src="./images/email.png" alt="" />
+                <h2>Email</h2>
               </div>
               <div class="link">
-                <img src="./images/library.png" alt="" />
-                <h2>Library</h2>
+                <img src="./images/website.png" alt="" />
+                <h2>Website</h2>
               </div>
             </div>
             <div class="pro">
@@ -93,20 +95,20 @@
             </div>
             <div class="links">
               <div class="link">
-                <img src="./images/twitch.png" alt="" />
-                <h2>Streams</h2>
+                <img src="./images/whatsapp.png" alt="" />
+                <h2>WhatsApp</h2>
               </div>
               <div class="link">
-                <img src="./images/steam.png" alt="" />
-                <h2>Games</h2>
+                <img src="./images/messenger.png" alt="" />
+                <h2>Messenger</h2>
               </div>
               <div class="link">
-                <img src="./images/upcoming.png" alt="" />
-                <h2>New</h2>
+                <img src="./images/email.png" alt="" />
+                <h2>Email</h2>
               </div>
               <div class="link">
-                <img src="./images/library.png" alt="" />
-                <h2>Library</h2>
+                <img src="./images/website.png" alt="" />
+                <h2>Website</h2>
               </div>
             </div>
             <div class="pro">
@@ -161,20 +163,20 @@
             </div>
             <div class="links">
               <div class="link">
-                <img src="./images/twitch.png" alt="" />
-                <h2>Streams</h2>
+                <img src="./images/whatsapp.png" alt="" />
+                <h2>WhatsApp</h2>
               </div>
               <div class="link">
-                <img src="./images/steam.png" alt="" />
-                <h2>Games</h2>
+                <img src="./images/messenger.png" alt="" />
+                <h2>Messenger</h2>
               </div>
               <div class="link">
-                <img src="./images/upcoming.png" alt="" />
-                <h2>New</h2>
+                <img src="./images/email.png" alt="" />
+                <h2>Email</h2>
               </div>
               <div class="link">
-                <img src="./images/library.png" alt="" />
-                <h2>Library</h2>
+                <img src="./images/website.png" alt="" />
+                <h2>Website</h2>
               </div>
             </div>
             <div class="pro">
@@ -216,6 +218,58 @@
                 <h2 class="percentage">60%</h2>
               </div>
             </div>
+          </div>
+        </section>
+      </section>
+      <section class="three">
+        <section class="glass">
+          <div class="dashboard">
+            <div class="user">
+              <img src="./images/pic.png" alt="" />
+              <h3>ElAmir ElOthmani</h3>
+              <p>Software Engineer</p>
+            </div>
+            <div class="links">
+              <div class="link">
+                <img src="./images/whatsapp.png" alt="" />
+                <h2>WhatsApp</h2>
+              </div>
+              <div class="link">
+                <img src="./images/messenger.png" alt="" />
+                <h2>Messenger</h2>
+              </div>
+              <div class="link">
+                <img src="./images/email.png" alt="" />
+                <h2>Email</h2>
+              </div>
+              <div class="link">
+                <img src="./images/website.png" alt="" />
+                <h2>Website</h2>
+              </div>
+            </div>
+            <div class="pro">
+              <h2>Join pro for free games.</h2>
+              <img src="./images/controller.png" alt="" />
+            </div>
+          </div>
+          <div class="games">
+            <div class="weather-container">
+              <div class="card">
+                <div class="location">
+                  <h1 class="location-timezone">Timezone</h1>
+                  <div><img class="documentIconImg" src="" alt="Weather icon"></div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="temperature">
+                  <div class="degree-section">
+                      <h2 class="temperature-degree">34</h2>
+                      <span>C</span>
+                  </div>
+                  <div class="temperture-description">It's friggin cold</div>
+                </div>
+              </div>
+            </div>  
           </div>
         </section>
       </section>
